Fri Apr  6 15:28:09 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* builtin.c (do_length): Only print `length(array)' lint warning once.
	* node.c (dump_wstr): Restore from being ifdef'ed out. Useful in case
	it needs to be called from a debugger.
	* regcomp.c (utf8_sb_map): Fix gcc-specific code.
	* awk.h (snprintf): Add declaration in case not available on the system.
	(Ceil, Floor): Add macros changing the name for VMS, in an attempt to
	fix linkage problems.
	* io.c: Simplify includes for internet headers and for getaddrinfo
	defines.

Wed Apr  4 23:38:24 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c [AI_ADDRCONFIG]: Add a definition in case it's not available.
	* main.c (usage): Add comment for translators to add translation
	bug report address.

Wed Apr  4 18:26:45 2007        Pat Rankin      <rankin@pactechdata.com>

	* regexec.c (build_trtrable): add missing #if HAVE_ALLOCA.

Thu Mar 29 19:30:20 2007        Pat Rankin      <rankin@pactechdata.com>

	* re.c (make_regexp): cast casetable to RE_TRANSLATE_TYPE.

Mon Mar 19 12:35:00 2007  Arnold D. Robbins  <arnold@skeeve.com>

	Finish removing references to STRTOD_NOT_C89.

	* awk.h (gawk_strtod): Use now if there is no strtod.
	* replace.c (strtod.c): Include if there is no strtod.
	* configure.ac [GAWK_AC_FUNC_STRTOD_C89]: Removed.

Mon Mar 19 12:17:16 2007  Kimura Koichi    <kimura.koichi@canon.co.jp>

	* dfa.c (dfaexec): Add check for half-width katakana characters in
	character classes in ShiftJIS locale.
	From mail originally sent Mon, 01 Aug 2005 09:07:55 +0900

Fri Mar  9 11:53:25 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* field.c (rebuild_record): Assert that wide string is off when
	creating new fields. Inspired by Karel Zak.

Fri Mar  9 11:26:01 2007  Matthew Woehlke   <mwoehlke@tibco.com>

	* io.c (get_a_record): Limit the max amount read to SSIZE_MAX. Needed
	on Tandem systems where this amount is incredibly small.

Tue Mar  6 08:17:49 2007  Paul Eggert  <eggert@cs.ucla.edu>
