@@ -55,7 +55,7 @@
 #ifdef HAVE_NETINET_IN_H
 #include <netinet/in.h>
 
-#if defined(__TANDEM) && defined(_TANDEM_SOURCE)
+#if HAVE_ARPA_INET_H
 #include <arpa/inet.h>
 #endif
 
